<resources>
    <string name="app_name">EuroProtocol</string>

    <!-- Login screen -->
    <string name="sing_in">ВХОД</string>
    <string name="sing_up">РЕГИСТРАЦИЯ</string>
    <string name="login_header">Для заполнения европротокола необходимо зарегистрироваться.</string>
    <string name="email_hint">Email или телефон</string>
    <string name="password_hint">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="title_activity_registration_user">RegistrationUserActivity</string>
    <string name="button_next">Далее</string>

</resources>
